# DWGReverb

./: CMakeLists.txt  DWGReverb.sc  PartitionedConvolutionTrig.cpp  README.md  Reverb.cpp  earlyref27Gen.lua  earlyref27GenPartConv.lua
HelpSource/Classes/: DWGReverb.schelp  DWGReverbC1C3.schelp  EarlyRef27Gen.schelp  EarlyRefAtkGen.schelp
dwglib/: DWG.hpp
lua/: earlyref27AtkGen.lua  earlyref27Gen.lua  earlyref27GenPartConv.lua
sc/HelpSource/Classes/: DWGReverb3Band.schelp  DWGReverb3Band_16.schelp  DWGReverbC1C3.schelp  DWGReverbC1C3_16.schelp  EarlyRef.schelp  EarlyRefAtkGen.schelp  EarlyRefGen.schelp  PartConvT.schelp
sc/classes/: DWGReverb.sc
sclang/HelpSource/Classes/: DWGReverb3Band.schelp  DWGReverbC1C3.schelp  DWGReverbC1C3_16.schelp  EarlyRefGen.schelp
